# CloudTun

./: .prettierignore  README.md  eslint.config.js  index.html  notify.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
scripts/: .gitignore  deploy-android.ts  util.ts  vite.config.ts
src/: App.notify.tsx  App.tsx  ContextMenu.tsx  Layout.tsx  main.notify.tsx  main.tsx  tailwind.css  tray.ts  vite-env.d.ts
src-common/: Cargo.toml
src-common/src/: constant.rs  encode.rs  lib.rs  ping.rs  proxy.rs  tencent.rs  util.rs
src-proxy/: Cargo.toml
src-proxy/src/: handler.rs  lib.rs  proxy.rs  route.rs  router.rs  tunnel.rs
src-server/: Cargo.toml
src-server/src/: config.rs  context.rs  main.rs  proxy.rs  routes.rs  ws.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json  ios.json  notify.json
src-tauri/icons/: icon.icns
src-tauri/src/: android.rs  lib.rs  main.rs  notify.rs  ping.rs  proxy.rs  tencent.rs  util.rs  v2ray.rs  vpn.rs
src-vpn/: Cargo.toml  build-android.sh
src-vpn/src/: android.rs  args.rs  dns.rs  error.rs  lib.rs  ping.rs  session_info.rs  virtual_dns.rs  vpn.rs
src/assets/: v2ray.conf.template.json
src/assets/shell-template/: agent.sh
src/components/: Copy.tsx
src/service/: instance.ts  notify.ts  region.ts  settings.ts  tencent.ts  util.ts
src/store/: global.ts  install.ts  instance.ts  log.ts  pid.ts  settings.ts
src/views/instance/: helper.ts
src/views/logview/: index.tsx
src/views/overview/: Price.tsx
src/views/proxy/: Balance.tsx  Bandwind.tsx  Control.tsx  DelayDestroy.tsx  Instance.tsx  Share.tsx  Socks.tsx  Sysproxy.tsx  Vpn.tsx  helper.ts  index.tsx
src/views/settings/: Common.tsx  FormItem.tsx  Instance.tsx  Secret.tsx  Swtich.tsx  index.tsx
tauri-plugin-ios/: Cargo.toml  README.md  build.rs  package.json
tauri-plugin-ios/ios/: Package.swift  README.md
tauri-plugin-ios/ios/Sources/: ExamplePlugin.swift
tauri-plugin-ios/permissions/: default.toml
tauri-plugin-ios/permissions/autogenerated/: reference.md
tauri-plugin-ios/permissions/autogenerated/commands/: tauri_start_ios_proxy.toml  tauri_stop_ios_proxy.toml
tauri-plugin-ios/permissions/schemas/: schema.json
tauri-plugin-ios/src/: commands.rs  lib.rs  mobile.rs
tauri-plugin-vpn/: Cargo.toml  README.md
tauri-plugin-vpn/android/: build.gradle.kts
tauri-plugin-vpn/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-vpn/android/src/main/java/: ExamplePlugin.kt
tauri-plugin-vpn/android/src/test/java/: ExampleUnitTest.kt
tauri-plugin-vpn/permissions/autogenerated/: reference.md
tauri-plugin-vpn/src/: commands.rs  lib.rs  mobile.rs
