[package]
name = "cloudtun-common"
version = "0.1.0"
edition = "2024"

[features]
tencent = ["serde", "reqwest", "anyhow"]

[dependencies]
chrono = "0.4.42"
hmac = "0.12.1"
sha2 = "0.10.9"

reqwest = { version = "0.12.23", default-features = false, features = [
  "json",
], optional = true }
serde = { version = "1.0.226", features = ["derive"], optional = true }
anyhow = { version = "1.0.100", optional = true }
