[package]
name = "cloudtun-common"
version = "0.1.0"
edition = "2024"

[features]
tencent = ["serde", "reqwest", "anyhow"]
proxy = [
  "tokio",
  "tokio-tungstenite",
  "tokio-util",
  "futures-util",
  "http",
  "rand",
]
ping = ["tokio", "reqwest", "http"]

[dependencies]
chrono = "0.4.42"
hmac = "0.12.1"
sha2 = "0.10.9"

# for tencent feature
reqwest = { version = "0.12.23", default-features = false, features = [
  "json",
  "rustls-tls",
], optional = true }

serde = { version = "1.0.226", features = ["derive"], optional = true }
anyhow = { version = "1.0.100", optional = true }

# for proxy feature
tokio = { version = "1.47.1", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.27.0", optional = true }
tokio-util = { version = "0.7.16", optional = true }
rand = { version = "0.9.2", optional = true }
http = { version = "1.3.1", optional = true }
futures-util = { version = "0.3.31", optional = true }
