[package]
name = "cloudtun-proxy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cloudtun"
path = "src/bin/client.rs"
required-features = ["bin"]

[features]
bin = ["clap", "ctrlc2"]

[dependencies]
cloudtun-common = { path = "../src-common" }
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tokio-util = { version = "0.7.16" }
futures-util = "0.3.31"
hyper = { version = "1", features = ["full"] }
hyper-util = "0.1.17"
lazy_static = "1.5.0"
rand = "0.9.2"

[target.'cfg(feature = "bin")'.dependencies]
ctrlc2 = { version = "3.7.3", features = ["async"], optional = true }
clap = { version = "4.5.47", features = ["derive"], optional = true }
