[package]
name = "cloudtun-proxy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cloudtun"
path = "src/bin/client.rs"
required-features = ["bin"]

[features]
bin = ["clap", "ctrlc2"]

[dependencies]
cloudtun-common = { path = "../src-common", features = ["proxy"] }
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = "0.1.17"

ctrlc2 = { version = "3.7.3", features = ["async"], optional = true }
clap = { version = "4.5.48", features = ["derive"], optional = true }
