[package]
name = "cloudtun-server"
version = "0.1.0"
edition = "2024"

[dependencies]
cloudtun-common = { path = "../src-common" }
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
futures-util = "0.3.31"
headers = "0.4.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27.0"
clap = { version = "4.5.47", features = ["derive"] }