[package]
name = "cloudtun"
version = "0.1.0"
description = "Cloud-based Proxy Solution"
authors = ["abeyuhang@gmail.com"]
edition = "2021"
license = "MIT"
repository = "https://github.com/YuhangGe/CloudTun"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cloudtun_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cloudtun-common = { path = "../src-common", features = ["tencent"] }
log = "0.4.28"
tauri = { version = "2", features = ["tray-icon", "devtools", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.100"
anyhow-tauri = "1.0.0"
base64 = "0.22"
sha2 = "0.10"
chrono = "0.4"
hmac = "0.12"
uuid = { version = "1.17", features = ["v4"] }
tauri-plugin-http = { version = "2.5", features = ["unsafe-headers"] }
tauri-plugin-store = "2.4"
tauri-plugin-os = "2.3"
tokio = { version = "1", features = ["macros"] }
tokio-util = { version = "0.7.16" }
env_logger = "0.11.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
cloudtun-proxy = { path = "../src-proxy" }
tauri-plugin-autostart = "2.5"
tauri-plugin-single-instance = "2.3"
tauri-plugin-clipboard-manager = "2.3"

# [target.'cfg(target_os = "android")'.dependencies]
# cloudtun-vpn = { path = "../src-vpn" }

[target.'cfg(target_os = "ios")'.dependencies]
tauri-plugin-ios = { path = "../tauri-plugin-ios" }
oslog = "0.2"
