[package]
name = "cloudtunvpn"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "cloudtunvpn-test"
path = "src/bin/test.rs"
required-features = ["bin"]

[features]
bin = ["ctrlc2"]

[dependencies]
cloudtun-common = { path = "../src-common", features = ["proxy", "ping"] }
tun = { version = "0.8.4", features = ["async"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.16"
ipstack = { version = "0.4.0" }
hashlink = "0.10.0"
tproxy-config = "7.0.4"
hickory-proto = "0.25.2"
async-trait = "0.1.89"
udp-stream = { version = "0.0.12", default-features = false }
anyhow = "1.0.100"
log = "0.4.28"
ctrlc2 = { "version" = "3.7.3", features = ["async"], optional = true }


[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.15.1"
jni = { version = "0.21.1", default-features = false }
